# Foling

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_TODO.md  SECURITY.md  THIRD-PARTY-NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: HTFL-SPEC.md  MCP.md  PLUGINS.md
examples/modules/: samples.yaml
sample-project/: htfl.yaml
sample-project/HTML/: config.yaml
sample-project/HTML/01_head/: config.yaml
sample-project/HTML/01_head/01_meta/: config.yaml
sample-project/HTML/01_head/02_title/: config.yaml
sample-project/HTML/02_body/: config.yaml
sample-project/HTML/02_body/01_header/: config.yaml
sample-project/HTML/02_body/01_header/01_div/: config.yaml
sample-project/HTML/02_body/01_header/01_h1/: config.yaml
sample-project/HTML/02_body/01_header/02_p/: config.yaml
sample-project/HTML/02_body/01_header/02_ul/: config.yaml
sample-project/HTML/02_body/01_header/03_p/: config.yaml
sample-project/HTML/02_body/02_article/: config.yaml
sample-project/HTML/02_body/02_main/: config.yaml
sample-project/HTML/02_body/03_footer/: config.yaml
sample-project/classes/: 01_foundation.css  02_component.css  02_layout.css  03_component.css
sample-project/modules/: sample.yaml
sample-project/plugins/starter/: jsx.js  plugin.yaml
scripts/: clean-dist.mjs
src/: App.css  App.tsx  ErrorBoundary.tsx  api.ts  bugReport.test.ts  bugReport.ts  i18n.ts  main.tsx  nativeMenu.ts  pluginRunner.ts  syntax.test.ts  syntax.ts  treeModel.test.ts  treeModel.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/source/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/htfl/: build.rs  import.rs  lock.rs  mod.rs  node.rs  plugin.rs  project.rs  tree.rs  types.rs
src-tauri/src/mcp/: mod.rs  server.rs  tools.rs  workspace.rs
src/locales/: ja.ts
(+38 files in other folders)
