[package]
name = "foling"
version = "0.10.0"
description = "Foling — HTFL (HyperText Foldering Language) editor"
authors = ["大松雄斗"]
license = "AGPL-3.0-or-later"
edition = "2021"

[lib]
name = "foling_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
walkdir = "2"
tiny_http = "0.12"
scraper = "0.20"
tauri-plugin-window-state = "2.4.1"
