[package]
name = "foling"
version = "0.12.5"
description = "Foling — HTFL (HyperText Foldering Language) editor"
authors = ["大松雄斗"]
license = "AGPL-3.0-or-later"
edition = "2021"
# The crate ships two binaries (the app and the MCP server), so a bare
# `cargo run` — which is what `tauri dev` issues — needs to be told which one.
default-run = "foling"

[lib]
name = "foling_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
walkdir = "2"
tiny_http = "0.12"
scraper = "0.20"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
